# SimpleEngineen

./: .gitignore  CMakeLists.txt  doc.md  imgui.ini  readme.md
L1/App/: Application.cpp  Application.h  Config.cpp  Config.h  Window.cpp  Window.h
L1/Debug/: CheckGL.cpp  CheckGL.h  Log.h  ScriptValue.h  TimeMeasure.h
L1/Lib/IO/: ImageLoader.cpp  ImageLoader.h  ImageWriter.cpp  ImageWriter.h  TextLoader.cpp  TextLoader.h
L1/Lib/Lua/: lua_interpreter.cpp  lua_interpreter.h  lua_read_data.cpp  lua_read_data.h  lua_v2.cpp  lua_v2.h
L1/Lib/Math/: Geometry.h  Transform2D.cpp  Transform2D.h  math.h  random.hpp  type.h
L1/Lib/OpengL/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
L1/Lib/OpengL/Buffer/: BufferLayout.cpp  BufferLayout.h  FrameBuffer.cpp  FrameBuffer.h  UBO.cpp  UBO.h  VBO.cpp  VBO.h
L1/Lib/Pool/: pool.h
L1/Object/: Node.cpp  Node.h  ScriptObject.cpp  ScriptObject.h  SignalObject.cpp  SignalObject.h  SignalSlot.h
L1/Render/: Drawer.cpp  Drawer.h  Renderer.cpp  Renderer.h
L1/Render/extension/: ShaderDrawer.cpp  ShaderDrawer.h
L1/ResourceManger/: ShaderDB.cpp  ShaderDB.h  TextureAsyncLoader.cpp  TextureAsyncLoader.h  TextureDB.cpp  TextureDB.h
L2/Event/: Event.h  EventManager.cpp  EventManager.h
L2/Lib/Audio/: AudioPlayer.h
L2/Lib/Net/: TcpClient.h  TcpServer.h
L2/Lib/imgui/: MyImGui.cpp  MyImGui.h
L2/Lib/imgui/Description/: FlatDescription.h  FlatUI.h
L2/Lib/imgui/UI/: AButton.h  ImViewport.cpp  ImViewport.h  MyDrag.cpp  MyDrag.h  RoundButton.cpp  RoundButton.h
L2/Object/: IDPool.h  MyDataBase.h  ObjectPool.h  TaskQueue.h
L2/Object/FunObject/: Sprite2D.cpp  Sprite2D.h
L3.5/3D/core/: Camera3D.cpp  Camera3D.h  Drawer3D.cpp  Drawer3D.h
L3.5/3D/core/Camera/: Camera3D.cpp  Camera3D.h  CameraController.cpp  CameraController.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
L3.5/3D/core/Light/: Light.h
L3.5/3D/core/Object/: Geometry.cpp  Geometry.h
L3.5/3D/core/model/: Mesh.h  Model.h
L3/Object/Mix/: Controller.h  PhysicNode.cpp  PhysicNode.h  ScriptBind.h
L3/Object/Physics/: PhysicObject.cpp  PhysicObject.h  PhysicWorld.cpp  PhysicWorld.h
L3/Object/SceneTreeCore/: Camera.cpp  Camera.h  DrawableNode.cpp  DrawableNode.h  Node2D.cpp  Node2D.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  Sprite2D.cpp  Sprite2D.h  Viewport.cpp  Viewport.h
L3/Object/SubClass/SceneTree/: FollowCamera.hpp  FollowSprite2D.cpp  FollowSprite2D.h  PhysicScene.cpp  PhysicScene.h  RectDraw.hpp
L4/Editor/: ImageLoad.h
L4/Editor/Animation/: Animation.h
L4/Editor/Console/: ImConsole.h
L4/Editor/Image/: Command.h  ImageCut.h  ImageDB.cpp  ImageDB.h  ImageDrawer.cpp  ImageDrawer.h  ImageLoad.h  ImagePlatter.cpp  ImagePlatter.h  rect_math.h
L4/Editor/Image/ImagePlatter/: ImagePlatter.cpp  ImagePlatter.h  ImagePlatterCommand.cpp  ImagePlatterCommand.h  ImagePlatterType.h
Test/: test01.cpp  test02.cpp  test03.cpp  test04.cpp  test05.cpp  test06.cpp  test07.cpp  test08.cpp  test08.h  test09.cpp
assets/Script/: config.lua  make_simple.lua  test1.lua  test2.lua
assets/Script/data/: image.lua  image2.lua
assets/Script/debug/: values.lua
assets/Shader/: screen_texture.frag  simple_circle.frag  simple_color.frag  simple_texture.frag  simple_texture.vert  very_simple.frag
assets/Shader/box/: box_normal.vert  cube.vert  simple_color.frag
assets/Shader/light/: light_material.frag
assets/Shader/model/: model.frag
assets/Shader/shadertoy/: common.vert  particles.frag
docs/: A.md  L1_doc.md  L2_doc.md  L3.5_doc.md  L3_doc.md  L4_doc.md  doc.md  insight.md  todo_list.md
docs/L1_API/: Application.md  Config.md
docs/L3_API/: Node2D.md  Scene.md  SceneNode.md
